--- a/1.css
+++ b/1.css
@@ -25,14 +25,26 @@
     box-shadow: 0 0 3px white;
     border-radius: 5px;
     /* padding-left: 1rem */
+    overflow: scroll;
+    scrollbar-width: 1px color red;
+    overflow-x: hidden;   
+}
+.box1::-webkit-scrollbar-thumb {
+    background: black; /* Change to desired handle color */
+}
+.box1::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+.box1::-webkit-scrollbar {
+    width: 2px; 
 }
 .box1 .group{
-    /* border: 2px solid red; */
+    border: 2px solid red;
     height: 4rem;
     width: 4rem;
     border-radius: 100%;
     margin-top: 4px;
-    background: url(./images/download.png);
+    /* background: url(./images/download.png); */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -94,62 +106,6 @@
     backdrop-filter:  blur(4px);
     transition: all 0.5s;
     transform: scale(0);
-}
-.box1 .create{
-    /* border: 2px solid red; */
-    padding: 10px 10px 10px 10px;
-    position: absolute;
-    z-index: 100;
-    width: 20rem;
-    left: 30rem;
-    /* top: -16rem; */
-    height: 15rem;
-    /* text-align: center; */
-    padding-left: 20px;
-    /* background-color: green; */
-    backdrop-filter: blur(10px);
-    box-shadow: 0 0 4px yellow;
-    border-radius: 4px;
-    /* padding-bottom: 2px; */
-    transition: ease-in-out 1s;
-}
-.box1 .create p{
-    color: white;
-    text-align: center;
-}
-.box1 .create .gName{
-    border: 2px solid red;
-    border-radius: 2px;
-    width: 16rem;
-    height: 2rem;
-    border: none;
-    outline: none;
-    padding-left: 4px;
-    box-shadow: 0 0 2px white;
-}
-.box1 .create label{
-    color: gold;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-}
-.box1 .create input{
-    border: none;
-    outline: none;
-    background: transparent;
-    /* color: red; */
-    border-radius: 4px;
-    box-shadow: 0 0 1px white;
-}
-.box1 .create .submit{
-    border: 2px solid red;
-    width: 5rem;
-    height: 2rem;
-    margin-left: 7rem;
-    font-size: 20px;
-    color: white;
-    font-weight: bold;
-    border:none;
-    box-shadow: 0 0 12px  pink;
-    border-radius: 2px;
 }
 .box1 .add:hover p{
     transform: scale(1);
