--- a/1.css
+++ b/1.css
@@ -5,10 +5,10 @@
 }
 .container{
     /* border: 5px solid red; */
-    height: 37rem;
+    height: 41.2rem;
     width: 100%;
     display: grid;
-    grid-template-columns: 7rem 18rem 40rem 15rem;
+    grid-template-columns: 7rem 18rem 40rem 23.7rem;
     background: url("images/BG5.jpg");
 }
 .box{
@@ -178,7 +178,7 @@
     /* border: 2px solid red; */
     height: 3rem;
     width: 3rem;   
-    background: url(/images/3048127.png);
+    background: url(./images/download.png);
     background-repeat: no-repeat;
     background-position: center;
     display: block;
@@ -230,7 +230,7 @@
 .box3 .person .img{
     height: 3rem;
     width: 3rem;   
-    background: url(/images/3048127.png);
+    background: url(./images/3048127.png);
     background-repeat: no-repeat;
     background-position: center;
     display: block;
@@ -315,12 +315,35 @@
 ::placeholder{
     color: white;
 }
+.box4{
+    /* border: 2px solid red; */
+    /* width: 100%; */
+}
+.box4 .thems{
+    display: flex;
+    /* border: 2px solid red; */
+    /* width: 100%; */
+    justify-content: space-between;
+    padding: 10px 10px 0 10px;
+}
 .box4 h1{
     color: white;
     text-align: center;
     border-bottom: 1px solid ;
     box-shadow: 0 0 3px pink;
     border-radius: 5px;
+    /* border: 2px solid red; */
+}
+.box4 .logout{
+    color: white;
+    text-align: center;
+    border-bottom: 1px solid ;
+    box-shadow: 0 0 3px pink;
+    border-radius: 5px;
+    width: 3rem;
+    height: 3rem;
+    line-height: 3rem;
+    /* border: 2px solid red; */
 }
 .box4 .img{
     /* border: 2px solid red; */
