--- a/1.css
+++ b/1.css
@@ -10,6 +10,8 @@
     display: grid;
     grid-template-columns: 7rem 18rem 40rem 23.7rem;
     background: url("images/BG5.jpg");
+    /* overflow: hidden; */
+    margin: 2px;
 }
 .box{
     height: 100%;
@@ -258,12 +260,29 @@
 }
 .box3 .chat{
     border-bottom: 1px solid;
-    height: 30rem;
+    height: 32rem;
     width: 100%;
     box-shadow: 0 0 3px white;
     border-radius: 5px;
     padding: 0 20px 0 20px;
     position: fixed;
+    box-shadow: 0 0 3px white;
+    border-radius: 5px;
+    overflow: scroll;
+    scrollbar-width: 1px color red;
+    overflow-x: hidden; 
+}
+.chat::-webkit-scrollbar-thumb {
+    background: black; /* Change to desired handle color */
+}
+.chat::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+.chat::-webkit-scrollbar {
+    width: 2px; 
+}
+.chat::-webkit-scrollbar-thumb:hover chat::-webkit-scrollbar {
+    width: 12px; 
 }
 .box3 .chat .left{
     color: white;
@@ -287,8 +306,10 @@
     backdrop-filter: blur(3px);
 }
 .box3 .inp{
-    position: absolute;
-    bottom: 10px;
+    position: fixed;
+    top: 37rem;
+    display: flex;
+    left: 0.5rem;
 }
 .box3 .inp label{
     font-size: 26px;
@@ -298,8 +319,8 @@
     margin-left: 10px;
 }
 .box3 .inp input{
-    /* border: 2px solid red; */
-    width: 34rem;
+    border: 2px solid red;
+    width: 28rem;
     height: 2.5rem;
     border: none;
     outline: none;
@@ -312,12 +333,21 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     backdrop-filter: blur(3px);
 }
+.box3 .inp #send{
+    /* border: 2px solid red; */
+    width: 5rem;
+    font-size: 20px;
+    font-weight: bold;
+    color: yellowgreen;
+    padding-right: 1rem;
+    cursor: pointer;
+}
 ::placeholder{
     color: white;
 }
 .box4{
-    /* border: 2px solid red; */
-    /* width: 100%; */
+    /* border: 2px solid red;
+    width: 100%; */
 }
 .box4 .thems{
     display: flex;
@@ -325,6 +355,7 @@
     /* width: 100%; */
     justify-content: space-between;
     padding: 10px 10px 0 10px;
+    /* flex-wrap: wrap; */
 }
 .box4 h1{
     color: white;
@@ -345,15 +376,23 @@
     line-height: 3rem;
     /* border: 2px solid red; */
 }
+.box4 .logout i{
+    color: white;
+}
 .box4 .img{
-    /* border: 2px solid red; */
+    /* border: 2px solid red;s */
     height: 4rem;
     width: 4rem;
     border-radius: 100%;
     margin: 40px 0px 0 8px;
     box-shadow: 0 0 4px white;
 }
-
+.box4 .imgs{
+    border: 2px solid red;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
 .box3 .right{
     /* background-color: red; */
     backdrop-filter: blur(2px);
